--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -462,7 +462,7 @@ can_usa <- data.frame(lon = rep(-141, 200)) %>%
   st_as_sf(coords = c("lon", "lat"), crs = st_crs("EPSG:4326"), remove = F) %>% 
   # Change projection
   st_transform(crs = st_crs(arctic_laea)) %>%
-  mutate(xc = st_coordinates(.)[,1],
+  mutate(xc =z st_coordinates(.)[,1],
          yc = st_coordinates(.)[,2], 
          lon = factor(lon)) %>%
   st_drop_geometry()
@@ -617,13 +617,13 @@ I prepare the datasets for the table (relative abundance per area) and the map (
 
 ```{r relative-abundance-area}
 trawl_area_df <- trawl %>%
-  # Find IHO area for each trawl deployment
-  st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon), 
-           remove = F) %>%
-  st_join(., LME_sf_latlon, join = st_within) %>% # Append IHO region
-  st_drop_geometry() %>%
-  mutate(LME = if_else(LME == "CAO" & lon > 0, "SV",
-               if_else(LME == "CAO" & lon < 0, "BF", LME))) %>%
+  # # Find IHO area for each trawl deployment
+  # st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon), 
+  #          remove = F) %>%
+  # st_join(., LME_sf_latlon, join = st_within) %>% # Append IHO region
+  # st_drop_geometry() #%>%
+  # mutate(LME = if_else(LME == "CAO" & lon > 0, "SV",
+  #              if_else(LME == "CAO" & lon < 0, "BF", LME))) %>%
   # Calculate number of individual for each species per IHO region
   group_by(LME, fish_species) %>% 
   summarise(number_fish = sum(number_fish)) %>%
@@ -636,9 +636,9 @@ trawl_area_df <- trawl %>%
   mutate(RA = (number_fish / total_fish) * 100) %>%
   mutate(LME = factor(
     case_when(
-      LME == "Barents Sea LME" ~ "N. Barents Sea\nn = 464",
-      LME == "Beaufort Sea LME" ~ "Beaufort Sea\nn = 923",
-      LME == "Baffin Bay LME" ~ "Baffin Bay\nn = 232"),
+      LME == "SV" ~ "N. Barents Sea\nn = 464",
+      LME == "BF" ~ "Beaufort Sea\nn = 923",
+      LME == "BB" ~ "Baffin Bay\nn = 232"),
     levels = c("Beaufort Sea\nn = 923",
                "Baffin Bay\nn = 232",
                "N. Barents Sea\nn = 464"))) %>%
@@ -670,7 +670,7 @@ trawl_station_df <- trawl %>%
   # Find LME for each trawl deployment
   st_as_sf(coords = c("lon", "lat"), crs = st_crs(arctic_latlon),
            remove = F) %>%
-  st_join(., LME_sf_latlon, join = st_within) %>% # Append LME
+  # st_join(., LME_sf_latlon, join = st_within) %>% # Append LME
   st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
   mutate(xc = st_coordinates(.)[,1],
          yc = st_coordinates(.)[,2]) %>%
@@ -698,42 +698,42 @@ trawl_station_df <- trawl %>%
               values_fill = 0) %>%
   # Jitter coordinates to avoid overplotting
   mutate(row = seq(1, 18, 1),
-         xc_jit = case_when(xc == xc[1] & yc == yc[1] ~ xc[1],
+         xc_jit = case_when(xc == xc[1] & yc == yc[1] ~ xc[1] + 25,
                             xc == xc[2] & yc == yc[2] ~ xc[2],
                             xc == xc[3] & yc == yc[3] ~ xc[3] - 25,
                             xc == xc[4] & yc == yc[4] ~ xc[4],
-                            xc == xc[5] & yc == yc[5] ~ xc[5] + 25,
+                            xc == xc[5] & yc == yc[5] ~ xc[5] + 35,
                             xc == xc[6] & yc == yc[6] ~ xc[6],
                             xc == xc[7] & yc == yc[7] ~ xc[7],
-                            xc == xc[8] & yc == yc[8] ~ xc[8],
+                            xc == xc[8] & yc == yc[8] ~ xc[8] - 10,
                             xc == xc[9] & yc == yc[9] ~ xc[9],
                             xc == xc[10] & yc == yc[10] ~ xc[10],
                             xc == xc[11] & yc == yc[11] ~ xc[11],
-                            xc == xc[12] & yc == yc[12] ~ xc[12] + 130,
+                            xc == xc[12] & yc == yc[12] ~ xc[12] + 140,
                             xc == xc[13] & yc == yc[13] ~ xc[13],
-                            xc == xc[14] & yc == yc[14] ~ xc[14] - 130,
+                            xc == xc[14] & yc == yc[14] ~ xc[14] - 140,
                             xc == xc[15] & yc == yc[15] ~ xc[15],
-                            xc == xc[16] & yc == yc[16] ~ xc[16] + 75,
+                            xc == xc[16] & yc == yc[16] ~ xc[16] + 85,
                             xc == xc[17] & yc == yc[17] ~ xc[17],
                             xc == xc[18] & yc == yc[18] ~ xc[18]),
          yc_jit = case_when(xc == xc[1] & yc == yc[1] ~ yc[1] - 25,
-                            xc == xc[2] & yc == yc[2] ~ yc[2] + 25,
+                            xc == xc[2] & yc == yc[2] ~ yc[2] + 35,
                             xc == xc[3] & yc == yc[3] ~ yc[3],
-                            xc == xc[4] & yc == yc[4] ~ yc[4] - 60,
-                            xc == xc[5] & yc == yc[5] ~ yc[5] - 25,
+                            xc == xc[4] & yc == yc[4] ~ yc[4] - 70,
+                            xc == xc[5] & yc == yc[5] ~ yc[5] - 35,
                             xc == xc[6] & yc == yc[6] ~ yc[6],
                             xc == xc[7] & yc == yc[7] ~ yc[7] + 25,
                             xc == xc[8] & yc == yc[8] ~ yc[8] - 50,
                             xc == xc[9] & yc == yc[9] ~ yc[9] + 25,
                             xc == xc[10] & yc == yc[10] ~ yc[10] + 50,
-                            xc == xc[11] & yc == yc[11] ~ yc[11] + 60,
+                            xc == xc[11] & yc == yc[11] ~ yc[11] + 70,
                             xc == xc[12] & yc == yc[12] ~ yc[12] + 35,
                             xc == xc[13] & yc == yc[13] ~ yc[13],
                             xc == xc[14] & yc == yc[14] ~ yc[14] - 35,
                             xc == xc[15] & yc == yc[15] ~ yc[15],
-                            xc == xc[16] & yc == yc[16] ~ yc[16] - 125,
+                            xc == xc[16] & yc == yc[16] ~ yc[16] - 135,
                             xc == xc[17] & yc == yc[17] ~ yc[17],
-                            xc == xc[18] & yc == yc[18] ~ yc[18] - 50))
+                            xc == xc[18] & yc == yc[18] ~ yc[18] - 60))
 ```
 
 ### Plot
@@ -797,10 +797,9 @@ map_RA <- trawl_station_df %>%
                            "Lanternfish",
                            "Redfish",
                            "Other"),
-                  alpha = 0.9, pie_scale = 1.5, legend_name = "Species", 
+                  alpha = 0.9, pie_scale = 1.75, legend_name = "Species", 
                   colour = "white", size = 0.2) +
-  # geom_text(aes(x = xc_jit, y = yc_jit, label = row), size = 2,
-  # col = "green") +
+  # geom_text(aes(x = xc_jit, y = yc_jit, label = row), size = 2,  col = "green") +
   scale_fill_manual(values = met.brewer("Johnson", n = 5, direction = -1)) +
   coord_fixed(xlim = c(-2450, 650), ylim = c(-1500, 1850), expand = F) +
   # Plot North Pole
@@ -860,7 +859,7 @@ col_pal <- c("#132B69", "#03739B", "#93AA43", "black")
 lm_SA_lat <- LM_area_res %>%
   ggplot() + 
   geom_point(data = SA_lm, aes(x = lat, y = SA_int, col = LME, shape = shape),
-             alpha = 0.7, size = 1) +
+             alpha = 0.7, size = 1.5) +
   geom_line(aes(x = lat, y = .fitted, col = LME), size = 0.6) + 
   geom_ribbon(aes(x = lat, ymin = .lower, ymax = .upper,
                   group = LME, fill = LME),
@@ -913,7 +912,7 @@ GAMSAI_velo <- predSA_I %>%
                       values = met.brewer("Johnson", n = 6, direction = -1)) +
   scale_fill_manual(name = "LME",
                     values = met.brewer("Johnson", n = 6, direction = -1)) +
-  coord_cartesian(xlim = c(-0.05, 4.05), ylim = c(-2, 37), expand = F) +
+  coord_cartesian(xlim = c(-0.05, 4.05), ylim = c(-4, 32), expand = F) +
   scale_x_continuous(breaks = seq(0, 10, 0.5)) +
   scale_y_continuous(
     expression("S"[A]*" (dB re 1 m"^2*" nmi"^-2*")"),
@@ -948,6 +947,18 @@ mycto_trawl <- trawl_station %>%
   filter(fish_species == "myctophidae") %>%
   mutate(var = if_else(area == "BB", "This study", "Geoffroy et al. 2019")) %>%
   dplyr::select(lon, lat, var)
+
+can_usa <- data.frame(lon = rep(-141, 200)) %>%
+  mutate(lat =  seq(0, 69.64, length.out = 200)) %>%
+  ungroup() %>%
+  # Transform into sf
+  st_as_sf(coords = c("lon", "lat"), crs = st_crs("EPSG:4326"), remove = F) %>% 
+  # Change projection
+  st_transform(crs = st_crs(arctic_laea)) %>%
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2], 
+         lon = factor(lon)) %>%
+  st_drop_geometry()
 
 map_mycto <- data.frame(
   lon = c(133 + (32.27/60), # AWI 1995
@@ -984,15 +995,15 @@ map_mycto <- data.frame(
           "Zhang et al. 2022", 
           "Snoeijs Leijonmalm et al. 2022", 
           rep("Frosti 2021", 3),
-          "Majewski et al. 2017\n(approximate location)",
-          rep("Gjøsaeter et al. 2017", 7))) %>% 
+          "Majewski et al. 2017",
+          rep("Gjøsæter et al. 2017", 7))) %>% 
   bind_rows(., mycto_trawl) %>%
   # Reorder studies
   mutate(var = 
            factor(var,
                   levels = c("Chernova & Neyelov 1995",
-                             "Gjøsaeter et al. 2017",
-                             "Majewski et al. 2017\n(approximate location)",
+                             "Gjøsæter et al. 2017",
+                             "Majewski et al. 2017",
                              "Geoffroy et al. 2019",
                              "Frosti 2021",
                              "Snoeijs Leijonmalm et al. 2022",
@@ -1009,19 +1020,25 @@ map_mycto <- data.frame(
   scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
   guides(fill = "none") +
   new_scale_fill() +
+  # Plot 200 m isobath
+  # geom_contour(data = bathy_laea, aes(z = depth), breaks = -200, col = "black", lwd = 0.1, alpha = 0.8) +
   # Plot LME
   # geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
   #              col = "black", fill = NA, alpha = 0.2,
   #              lwd = 0.35, lty = 1) +
   # Plot coastlines
-  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), alpha = 0,
                fill = "grey30") +
+  # geom_path(data = can_usa, aes(x = xc, y = yc, group = lon), col = "grey5", size = 0.2) +
+  # Arctic circle
+  # geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
+  #           col = "white", lty = 2, size = 0.4) +
   # Plot locations of myctophids
   geom_point(aes(x = xc, y = yc, fill = var), shape = 21,
-             size = 2.5, alpha = 0.8) +
+             size = 2, alpha = 0.8) +
   # Plot North Pole
-  geom_point(aes(x = 0, y = 0), shape = 4, stroke = 1) +
-  coord_fixed(xlim = c(-2450, 1200), ylim = c(-1500, 2000), expand = F) +
+  # geom_point(aes(x = 0, y = 0), shape = 4, size = 1, stroke = 0.7) +
+  coord_fixed(xlim = c(-2700, 1650), ylim = c(-2400, 2300), expand = F) +
   scale_fill_manual(values = col_pal) +
   # guides(fill = "none") +
   theme(legend.position = "right", 
@@ -1033,7 +1050,188 @@ map_mycto <- data.frame(
 # Save and display plots
 ggsave("plots/map_myctophid.png", map_mycto,
        height = 4, width = 6, dpi = 600, units = "in")
-map_mycto
+# map_mycto
+
+map_mycto_nopoint <- data.frame(
+  lon = c(133 + (32.27/60), # AWI 1995
+          133 + (34.9/60), # AWI 1995
+          -179.99, # Zhang 2022
+          25.5, # Snoeijs Leijonmalm et al. 2022
+          -122.357, # Frosti 2021
+          -117.90, # Frosti 2021
+          -117.088, # Frosti 2021
+          -135, # Majewski 2017 approximate location
+          15.2937, # Gjosaeter 2017
+          14.9276, # Gjosaeter 2017
+          5.1679, # Gjosaeter 2017
+          15.2468, # Gjosaeter 2017
+          15.0405, # Gjosaeter 2017
+          5.8664, # Gjosaeter 2017
+          7.5160), # Gjosaeter 2017
+  lat = c(78 + (06.02/60), # AWI 1995
+          77 + (54.83/60), # AWI 1995
+          75.04, # Zhang 2022
+          88.0, # Snoeijs Leijonmalm et al. 20221
+          70.896, # Frosti 2021
+          70.342, # Frosti 2021
+          70.332, # Frosti 2021
+          70.5, # Majewski 2017 approximate location)
+          81.5606, # Gjosaeter 2017
+          81.3716, # Gjosaeter 2017
+          79.6945, # Gjosaeter 2017
+          81.3636, # Gjosaeter 2017
+          80.9763, # Gjosaeter 2017
+          79.6613, # Gjosaeter 2017
+          79.6689), # Gjosaeter 2017
+  var = c(rep("Chernova & Neyelov 1995", 2), 
+          "Zhang et al. 2022", 
+          "Snoeijs Leijonmalm et al. 2022", 
+          rep("Frosti 2021", 3),
+          "Majewski et al. 2017",
+          rep("Gjøsæter et al. 2017", 7))) %>% 
+  bind_rows(., mycto_trawl) %>%
+  # Reorder studies
+  mutate(var = 
+           factor(var,
+                  levels = c("Chernova & Neyelov 1995",
+                             "Gjøsæter et al. 2017",
+                             "Majewski et al. 2017",
+                             "Geoffroy et al. 2019",
+                             "Frosti 2021",
+                             "Snoeijs Leijonmalm et al. 2022",
+                             "Zhang et al. 2022",
+                             "This study"))) %>%
+  st_as_sf(coords = c("lon", "lat"), crs = crs(arctic_latlon), remove = F) %>%
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry() %>%
+  ggplot(aes(x = xc, y = yc)) +
+  # Plot bathy
+  geom_raster(data = bathy_laea, aes(fill = depth_d), alpha = 0.8) +
+  scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+  guides(fill = "none") +
+  new_scale_fill() +
+  # Plot 200 m isobath
+  # geom_contour(data = bathy_laea, aes(z = depth), breaks = -200, col = "black", lwd = 0.1, alpha = 0.8) +
+  # Plot LME
+  # geom_polygon(data = LME, aes(x = xc, y = yc, group = group),
+  #              col = "black", fill = NA, alpha = 0.2,
+  #              lwd = 0.35, lty = 1) +
+  # Plot coastlines
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), alpha = 0,
+               fill = "grey30") +
+  # geom_path(data = can_usa, aes(x = xc, y = yc, group = lon), col = "grey5", size = 0.2) +
+  # Arctic circle
+  # geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
+  #           col = "white", lty = 2, size = 0.4) +
+  # Plot locations of myctophids
+  geom_point(aes(x = xc, y = yc, fill = var), shape = 21,
+             size = 2, alpha = 0) +
+  # Plot North Pole
+  # geom_point(aes(x = 0, y = 0), shape = 4, size = 1, stroke = 0.7) +
+  coord_fixed(xlim = c(-2700, 1650), ylim = c(-2400, 2300), expand = F) +
+  scale_fill_manual(values = col_pal) +
+  # guides(fill = "none") +
+  theme(legend.position = "right", 
+        legend.title = element_blank(),
+        panel.border = element_rect(fill = NA),
+        axis.text = element_blank(),
+        axis.ticks = element_blank(), 
+        axis.title = element_blank())
+# Save and display plots
+ggsave("plots/map_myctophid_nopoints.png", map_mycto_nopoint,
+       height = 4, width = 6, dpi = 600, units = "in")
+# map_mycto
+
+map_mycto_base <- data.frame(
+  lon = c(133 + (32.27/60), # AWI 1995
+          133 + (34.9/60), # AWI 1995
+          -179.99, # Zhang 2022
+          25.5, # Snoeijs Leijonmalm et al. 2022
+          -122.357, # Frosti 2021
+          -117.90, # Frosti 2021
+          -117.088, # Frosti 2021
+          -135, # Majewski 2017 approximate location
+          15.2937, # Gjosaeter 2017
+          14.9276, # Gjosaeter 2017
+          5.1679, # Gjosaeter 2017
+          15.2468, # Gjosaeter 2017
+          15.0405, # Gjosaeter 2017
+          5.8664, # Gjosaeter 2017
+          7.5160), # Gjosaeter 2017
+  lat = c(78 + (06.02/60), # AWI 1995
+          77 + (54.83/60), # AWI 1995
+          75.04, # Zhang 2022
+          88.0, # Snoeijs Leijonmalm et al. 20221
+          70.896, # Frosti 2021
+          70.342, # Frosti 2021
+          70.332, # Frosti 2021
+          70.5, # Majewski 2017 approximate location)
+          81.5606, # Gjosaeter 2017
+          81.3716, # Gjosaeter 2017
+          79.6945, # Gjosaeter 2017
+          81.3636, # Gjosaeter 2017
+          80.9763, # Gjosaeter 2017
+          79.6613, # Gjosaeter 2017
+          79.6689), # Gjosaeter 2017
+  var = c(rep("Chernova & Neyelov 1995", 2), 
+          "Zhang et al. 2022", 
+          "Snoeijs Leijonmalm et al. 2022", 
+          rep("Frosti 2021", 3),
+          "Majewski et al. 2017",
+          rep("Gjøsæter et al. 2017", 7))) %>% 
+  bind_rows(., mycto_trawl) %>%
+  # Reorder studies
+  mutate(var = 
+           factor(var,
+                  levels = c("Chernova & Neyelov 1995",
+                             "Gjøsæter et al. 2017",
+                             "Majewski et al. 2017",
+                             "Geoffroy et al. 2019",
+                             "Frosti 2021",
+                             "Snoeijs Leijonmalm et al. 2022",
+                             "Zhang et al. 2022",
+                             "This study"))) %>%
+  st_as_sf(coords = c("lon", "lat"), crs = crs(arctic_latlon), remove = F) %>%
+  st_transform(crs = st_crs(arctic_laea)) %>% # Change projection
+  mutate(xc = st_coordinates(.)[,1],
+         yc = st_coordinates(.)[,2]) %>%
+  st_drop_geometry() %>%
+  ggplot(aes(x = xc, y = yc)) +
+  # Plot bathy
+  geom_raster(data = subset(bathy_laea, depth >= -200), aes(fill = depth_d), alpha = 1) +
+  scale_fill_manual("Depth (m)", values = c("#E8E8E8", "#DBDBDB", "red")) +
+  guides(fill = "none") +
+  new_scale_fill() +
+  # Plot coastlines
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
+               fill = "grey30") +
+  geom_path(data = can_usa, aes(x = xc, y = yc, group = lon), col = "grey5", size = 0.2) +
+  geom_contour(data = bathy_laea, aes(z = depth), breaks = -200, col = "black", lwd = 0.1, alpha = 0.8) +
+  # Arctic circle
+  geom_path(data = arctic_circle_laea, aes(x = xc, y = yc), 
+            col = "white", lty = 2, size = 0.4) +
+  # Plot locations of myctophids
+  geom_point(aes(x = xc, y = yc, fill = var), shape = 21,
+             size = 2, alpha = 0) +
+  # Plot North Pole
+  # geom_point(aes(x = 0, y = 0), shape = 4, size = 1, stroke = 0.7) +
+  coord_fixed(xlim = c(-2700, 1650), ylim = c(-2400, 2300), expand = F) +
+  scale_fill_manual(values = col_pal) +
+  # guides(fill = "none") +
+  theme(legend.position = "right", 
+        legend.title = element_blank(),
+        plot.background = element_rect(fill = "transparent", colour = NA),
+        panel.background = element_rect(fill = "transparent", colour = NA),
+        panel.border = element_rect(fill = NA),
+        axis.text = element_blank(),
+        axis.ticks = element_blank(), 
+        axis.title = element_blank())
+# Save and display plots
+ggsave("plots/map_myctophid_base.png", map_mycto_base,  bg = 'transparent',
+       height = 4, width = 6, dpi = 600, units = "in")
+# map_mycto_base
 ```
 
 ## Figure SX boxplot WMD
