--- a/PanArctic_DSL_statistics.Rmd
+++ b/PanArctic_DSL_statistics.Rmd
@@ -80,6 +80,7 @@ coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>%
 # Gridded acoustic, CTD, and sea ice data
 load(paste0("data/acoustics/SA_grids_", cell_res, "km.RData")) 
 load(paste0("data/remote_sensing/physics_grids_", cell_res, "km.RData"))
+load(paste0("data/CTD/CTD_grids_", cell_res, "km.RData"))
 ```
 
 # Data preparation
@@ -100,7 +101,8 @@ phy_laea <- phy_grid_laea %>%
   mutate(depth = factor(depth))
 
 stat_laea <- SA_laea %>%
-  left_join(., phy_laea, by = c("year", "xc", "yc", "area", "cell_res"))
+  left_join(., phy_laea, by = c("year", "xc", "yc", "area", "cell_res")) %>%
+  left_join(., CTD_grid_laea, by = c("year", "xc", "yc", "cell_res"))
 ```
 
 There is 1 NA in the physics dataset.
@@ -1155,8 +1157,8 @@ Refit model with REML
 
 ```{r fit-GAMSAS3-reml}
 GAMSA_S3 <- gam(SA_int ~ 
-                  s(year, bs = "re") +
-                  s(LME, bs = "re") +
+                  s(year, LME, bs = "re") +
+                  # s(LME, bs = "re") +
                   s(v, LME, bs = "fs", k = 5),
                 data = SA_df, family = "gaussian", method = "REML")
 summary(GAMSA_S3)
@@ -1192,8 +1194,8 @@ Refit model with REML
 
 ```{r fit-GAMSAI3-reml}
 GAMSA_I3 <- gam(SA_int ~
-                  s(year, bs = "re") +
-                  s(LME, bs = "re") +
+                  s(year, LME, bs = "re") +
+                  # s(LME, bs = "re") +
                   s(v, by = LME, k = 6, bs = "tp"),
                 data = SA_df, family = "gaussian", method = "REML")
 summary(GAMSA_I3)
@@ -1232,7 +1234,6 @@ par(mfrow = c(1, 2))
 acf(resid(GAMSA_I3), lag.max = 20, main = "ACF")
 pacf(resid(GAMSA_I3), lag.max = 20, main = "pACF")
 ```
-
 
 ## Model predictions
 
@@ -1367,6 +1368,7 @@ plot_grid(GAMSAS_velo, GAMSAI_velo, ncol = 1)
 
 ```{r}
 library(plotly)
+ggplotly(
 predSA_I %>%
   filter(var == "v") %>%
   ggplot() +
@@ -1382,5 +1384,10 @@ predSA_I %>%
         axis.line = element_line(),
         legend.title = element_blank(), 
         legend.position = "top")
+)
+```
+
+```{r}
+gam.vcomp(GAMSA_I3)
 ```
 
